--- a/Chat Application/index.html
+++ b/Chat Application/index.html
@@ -20,7 +20,8 @@
     </div>
     <div class="send">
         <form action="#" id="sendContainer">
-            <input type="text" name="messageInp" id="messageInp">
+            <!-- <input type="text" name="messageInp" id="messageInp"> -->
+            <textarea name="messageInp" id="messageInp" cols="30" rows="10"></textarea>
             <button type="submit" class="btn">Send</button>
         </form>
     </div>
