--- a/Web Development Bootcamp/3 - HTML Personal Site/index.html
+++ b/Web Development Bootcamp/3 - HTML Personal Site/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-    <center>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsiKnMEUepRBuXSPe1XDQdiY40Dlk1_Koesg&usqp=CAU" alt="John Mayer">
-    </center>
     <meta charset="UTF-8">
     <!-- Meta tag give meta data or associated data to your HTML document. Above meta tag tells the browser that all the text inside our webpage is encoded using UTF-8 encoded system. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,27 +10,43 @@
 </head>
 
 <body>
-    
-    <h1>Tushar Dimri</h1>
-    <p><i>Student of <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwiMzLOcjt3yAhWzg0sFHR5CAAsYABAAGgJzZg&ae=2&ohost=www.google.com&cid=CAESQOD2z9XGKOorv0ZgUgoV3_O2wlW6e4SimDwvlZP2gxW-LnMnfgMvU0Gr_MdGFBRLVDTqabdYarzt2TCH9_GQABM&sig=AOD64_0S21v-VaGBBV_HaPPrqhNWdeiQkA&q&adurl&ved=2ahUKEwj9hKucjt3yAhUn3jgGHXj-C0cQ0Qx6BAgCEAE" target="_blank">Graphic Era Hill University</a></i></p>
-    <p><em>B. Tech CSE</em></p>
-    <!-- Google the difference between the em and i tags. -->
-    <!-- Google the difference between the b and strong tags. -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero itaque, ducimus ut, esse explicabo ea dolore nihil voluptate corporis ipsa assumenda veritatis repellat cupiditate nesciunt delectus quaerat, facilis magni rem doloribus officia fuga. Dolores incidunt deserunt maxime cumque a vero perferendis, illo consectetur minima inventore? Similique maiores iure alias enim!</p>
+    <table cellspacing="20">
+        <!-- The attribute cell spacing is deprecated. -->
+        <tr>
+            <td>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsiKnMEUepRBuXSPe1XDQdiY40Dlk1_Koesg&usqp=CAU"
+                    alt="John Mayer">
+            </td>
+            <td>
+                <h1>Tushar Dimri</h1>
+                <p><i>Student of <a
+                            href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwiMzLOcjt3yAhWzg0sFHR5CAAsYABAAGgJzZg&ae=2&ohost=www.google.com&cid=CAESQOD2z9XGKOorv0ZgUgoV3_O2wlW6e4SimDwvlZP2gxW-LnMnfgMvU0Gr_MdGFBRLVDTqabdYarzt2TCH9_GQABM&sig=AOD64_0S21v-VaGBBV_HaPPrqhNWdeiQkA&q&adurl&ved=2ahUKEwj9hKucjt3yAhUn3jgGHXj-C0cQ0Qx6BAgCEAE"
+                            target="_blank">Graphic Era Hill University</a></i></p>
+                <p><em>B. Tech CSE</em></p>
+                <!-- Google the difference between the em and i tags. -->
+                <!-- Google the difference between the b and strong tags. -->
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero itaque, ducimus ut, esse explicabo ea
+                    dolore nihil voluptate corporis ipsa assumenda veritatis repellat cupiditate nesciunt delectus
+                    quaerat, facilis magni rem doloribus officia fuga. Dolores incidunt deserunt maxime cumque a vero
+                    perferendis, illo consectetur minima inventore? Similique maiores iure alias enim!</p>
+            </td>
+        </tr>
+    </table>
+
     <hr size="3">
-    <h3>Skills</h3>
     <ul>
         <li>
             <strong>Tech Skills</strong>
             <ol>
-                <li>>Web Development</a></li>
-                <li><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=1754098" target="_blank">Data Science</a></li>
+                <li>Web Development</a></li>
+                <li><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=1754098" target="_blank">Data
+                        Science</a></li>
                 <li>Python</li>
                 <li>C</li>
                 <li>Android Development</li>
             </ol>
         </li>
-        <br>
+        <hr>
         <li>
             <strong>Musical Instruments</strong>
             <ol>
@@ -42,22 +55,78 @@
                 <li>Violin</li>
             </ol>
         </li>
-        <br>
+        <hr>
         <li>
-            <a href="hobbies.html">Hobbies</a>
+            <strong>Hobbies</strong>
+            <ol>
+                <li>Working Out</li>
+                <li>Japanese</li>
+                <li>Reading</li>
+            </ol>
         </li>
-        <br>
+        <hr>
+        <li>
+            <a href="contact.html"> <strong> Contact Me </strong> </a>
+        </li>
+        <hr>
         <li>
             <strong>
-                Contact Me
+                Work Experience
             </strong>
-            <ol>
-                <li>Gmail: <em>tushar.dimri91@gmail.com</em></li>
-                <li>Phone: 7********1</li>
-            </ol>
+            <table cellspacing="10">
+                <thead>
+                    <tr>
+                        <th>Dates</th>
+                        <th>Work</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2017-2019</td>
+                        <td>Junior Developer at ABC Corp.</td>
+                    </tr>
+                    <tr>
+                        <td>2020</td>
+                        <td>Android Developer at XYZ</td>
+                    </tr>
+                </tbody>
+            </table>
+        </li>
+        <hr>
+        <li>
+            <strong>Level</strong>
+            <table cellspacing="10">
+                <tr>
+                    <td>
+                        <table cellspacing="10">
+                            <tr>
+                                <td>Python</td>
+                                <td>⭐⭐⭐⭐</td>
+                            </tr>
+                            <tr>
+                                <td>Web Development</td>
+                                <td>⭐⭐⭐</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>
+                        <table cellspacing="10">
+                            <tr>
+                                <td>Data Science</td>
+                                <td>⭐</td>
+                            </tr>
+                            <tr>
+                                <td>C</td>
+                                <td>⭐⭐⭐</td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
         </li>
     </ul>
     <hr size="3">
+
 </body>
 
 </html>
