--- a/Web Development Bootcamp/3 - HTML Personal Site/index.html
+++ b/Web Development Bootcamp/3 - HTML Personal Site/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tushar's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -14,8 +15,8 @@
         <!-- The attribute cell spacing is deprecated. -->
         <tr>
             <td>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsiKnMEUepRBuXSPe1XDQdiY40Dlk1_Koesg&usqp=CAU"
-                    alt="John Mayer">
+                <img src="images/Me.jpg"
+                    alt="My Photograph">
             </td>
             <td>
                 <h1>Tushar Dimri</h1>
@@ -33,8 +34,8 @@
         </tr>
     </table>
 
-    <hr size="3">
     <ul>
+        <hr>
         <li>
             <strong>Tech Skills</strong>
             <ol>
@@ -124,8 +125,8 @@
                 </tr>
             </table>
         </li>
+        <hr>
     </ul>
-    <hr size="3">
 
 </body>
 
