--- a/Web Development Bootcamp/7 - Tin Dog/index.html
+++ b/Web Development Bootcamp/7 - Tin Dog/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="colored-section">
 
     <div class="container-fluid">
       <!-- Nav Bar -->
@@ -83,7 +83,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section id="features" class="white-section">
     <div class="container-fluid">
 
       <div class="row ">
@@ -115,7 +115,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
 
     <div id="testimonail-controls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -150,7 +150,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section id="press" class="colored-section">
     <img src="images/techcrunch.png" alt="tc-logo" class="press-logo">
     <img src="images/tnw.png" alt="tnw-logo" class="press-logo">
     <img src="images/bizinsider.png" alt="biz-insider-logo" class="press-logo">
@@ -161,7 +161,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -216,15 +216,12 @@
 
     </div>
 
-
-
-
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="colored-section">
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
@@ -237,7 +234,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" class="white-section">
     <i class="fab fa-twitter fa-2x icons"></i>
     <i class="fab fa-facebook fa-2x icons"></i>
     <i class="fab fa-instagram fa-2x icons"></i>
