--- a/Web Development Bootcamp/8 - Javascript/Tutorials.html
+++ b/Web Development Bootcamp/8 - Javascript/Tutorials.html
@@ -16,5 +16,12 @@
 <!-- <script src="5 - String Concatenation.js"></script> -->
 <!-- <script src="6 - String Length.js"></script> -->
 <!-- <script src="7 - Slicing and Extracting Parts of a String.js"></script> -->
-<script src="8 - Changing Casing in text.js"></script>
+<!-- <script src="8 - Changing Casing in text.js"></script> -->
+<!-- <script src="9 - Basic Arithmetic .js"></script> -->
+<!-- <script src="10 - Increment and Decrement Operators.js"></script> -->
+<!-- <script src="11 - Functions - Creating and Calling Functions.js"></script> -->
+<!-- <script src="12 - Functions - Parameters and Arguments.js"></script> -->
+<!-- <script src="13 - Challenge - Life in Weeks.js"></script> -->
+<!-- <script src="14 - Functions - Outputs and Return Values.js"></script> -->
+<script src="15 - Challenge - BMI Calculator.js"></script>
 </html>
