--- a/Web Development Bootcamp/9 - Intermediate Javascript/index.html
+++ b/Web Development Bootcamp/9 - Intermediate Javascript/index.html
@@ -16,4 +16,6 @@
 <!-- <script src="5 - BMI Calculator.js"></script> -->
 <!-- <script src="6 - Leap Year.js"></script> -->
 <!-- <script src="7 - Collections - Working with Javascript Arrays.js"></script> -->
+<!-- <script src="8 - Adding Elements and Intermediate Array Techniques.js"></script> -->
+<!-- <script src="9 - Who's Buying Lunch.js"></script> -->
 </html>
