--- a/Web Development Bootcamp/7 - Tin Dog/index.html
+++ b/Web Development Bootcamp/7 - Tin Dog/index.html
@@ -239,7 +239,7 @@
     <i class="fab fa-facebook fa-2x icons"></i>
     <i class="fab fa-instagram fa-2x icons"></i>
     <i class="fas fa-envelope fa-2x icons"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2018 sTinDog</p>
 
   </footer>
 
