--- a/Mutant MMA Academy/index.html
+++ b/Mutant MMA Academy/index.html
@@ -89,10 +89,31 @@
 
   <section id="services" style="height: 300px;"></section>
 
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="container-fluid background">
+      <h1 class="align-center contact-heading">Contact Us</h1>
+      <div class="contact-form">
+        <form action="">
+          <input type="text" class="name" name="name" id="name" placeholder="Name: ">
+          <br>
+          <input type="tel" class="phone" name="phone" id="phone" placeholder="Phone Number: ">
+          <br>
+          <input type="email" class="mail" name="mail" id="mail" placeholder="Gmail: ">
+          <br>
+          <textarea name="query" id="" cols="23" rows="10" placeholder="Enter your query: "></textarea>
+          <br>
+          <button type="submit" class="contact-button">Submit</button>
+        </form>
+      </div>
+    </div>
+
+  </section>
+
   <!-- Footer -->
   <footer id="footer" class="white-section">
     <div class="navigation">
-      
+
     </div>
     <div class="social">
       <a href="https://www.youtube.com/c/AngadBishtMMA" target="_blank">
@@ -101,12 +122,20 @@
       <a href="https://www.instagram.com/mutantmmacademydehradun/" target="_blank">
         <i class="fab fa-instagram fa-2x icons"></i>
       </a>
+      <a href="https://m.facebook.com/profile.php?id=100064166791452&fref=mentions&_rdr" target="_blank">
+        <i class="fab fa-facebook fa-2x icons"></i>
+      </a>
+      <a href="mailto:unorthodoxtraining@gmail.com" target="_blank">
+        <i class="fas fa-envelope fa-2x icons"></i>
+      </a>
     </div>
     <p>© Copyright Mutant MMA Academy</p>
 
   </footer>
 
-
+  <button onclick="topFunction()" id="myBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i>
+  </button>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
