--- a/Web Development Bootcamp/13 - Jquery/index.html
+++ b/Web Development Bootcamp/13 - Jquery/index.html
@@ -18,6 +18,7 @@
 
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- On following the above link we are redirected to a page containing minified Javascript. After minifying, the size of out JS file reduces. -->
     <!-- My Javascript -->
     <script src="index.js"></script>
 </body>
